--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   label_textfield_widget: ^0.0.2
+  flutter_cupertino_date_picker: ^1.0.11
+  intl: ^0.15.8
 
 dev_dependencies:
   flutter_test:
