--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   label_textfield_widget: ^0.0.2
   flutter_cupertino_date_picker: ^1.0.11
   intl: ^0.15.8
+  sqflite: ^1.1.6+3
+  google_sign_in: ^4.0.6
 
 dev_dependencies:
   flutter_test:
