--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,6 @@ doc/api/
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 key.properties
+
+google-services.json
+GoogleService-Info.plist
