--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   intl: ^0.15.8
   sqflite: ^1.1.6+3
   google_sign_in: ^4.0.6
+  flutter_bloc: ^0.20.1
+  equatable: ^0.4.0
+  meta: ^1.1.6
 
 dev_dependencies:
   flutter_test:
