--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/top.png
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+    - assets/setup_1.png
+    - assets/setup_2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
