--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ env:
 before_script:
   - git clone https://github.com/flutter/flutter.git -b $FLUTTER_VERSION
   - ./flutter/bin/flutter doctor
+before_script:
+  - mv lib/config/config.example.dart lib/config/config.dart
 script:
   - ./flutter/bin/flutter test
 cache:
