--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - git clone https://github.com/flutter/flutter.git -b $FLUTTER_VERSION
   - ./flutter/bin/flutter doctor
 before_script:
-  - mv lib/config/config.example.dart lib/config/config.dart
+  - mv smart_dock_mobile/lib/config/config.example.dart smart_dock_mobile/lib/config/config.dart
 script:
   - ./flutter/bin/flutter test
 cache:
