--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   meta: ^1.1.6
   dio: ^2.1.16
   flutter_secure_storage: ^3.2.1+1
+  charts_flutter: ^0.8.0
 
 dev_dependencies:
   flutter_test:
