--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_cupertino_date_picker: ^1.0.11
-  intl: ^0.15.8
-  sqflite: ^1.1.6+3
+  flutter_cupertino_date_picker: ^1.0.12
+  intl: ^0.16.0
+  sqflite: 1.1.7+1
   google_sign_in: ^4.0.7
-  flutter_bloc: ^0.21.0
+  flutter_bloc: ^1.0.0
   equatable: ^0.5.1
   meta: ^1.1.6
-  dio: ^2.1.16
-  flutter_secure_storage: ^3.2.1+1
-  charts_flutter: ^0.8.0
+  dio: ^3.0.3
+  flutter_secure_storage: ^3.3.1+1
+  charts_flutter: ^0.8.1
 
 dev_dependencies:
   flutter_test:
